objects/Activity.object
<CustomObject>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <formula>TEXT(Owner:User.sf42_Business_Unit__c)</formula>
        <label>Business Unit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Closed_in_Year__c</fullName>
        <formula>IF(OR(ISPICKVAL(Status,&quot;Completed&quot;),ISPICKVAL(ptt_Status_for_Activity__c,&quot;Completed&quot;)),
   IF( ISBLANK(CompletedDateTime), TEXT(YEAR(ActivityDate)), TEXT(YEAR(DATEVALUE(CompletedDateTime)))),
         Null)</formula>
        <label>Closed in Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Completed_Date__c</fullName>
        <description>https://trailblazer.salesforce.com/ideaview?id=08730000000BqsWAAS</description>
        <formula>DATEVALUE(IF(IsTask,
             CompletedDateTime,
             IF(ActivityDateTime + DurationInMinutes / 1440 &lt; NOW(),
                ActivityDateTime + DurationInMinutes / 1440,
                Null)))</formula>
        <label>Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Current_user_BU_eq_Owner_BU__c</fullName>
        <formula>IF( ptt_Owner_BU__c =  TEXT($User.sf42_Business_Unit__c) ,
 &apos;TRUE&apos;,
 &apos;FALSE&apos;
)</formula>
        <label>Current user BU eq Owner BU</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Type__c</fullName>
        <description>Workaround for not available Type field in reports.</description>
        <label>Event Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Task_Type__c</fullName>
        <description>Workaround for missing Type field in reports.</description>
        <label>Task Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ptt_Assigned_To_Role__c</fullName>
        <description>Assigned To role information. For example to find a Community/Partner users.</description>
        <formula>Owner:User.UserRole.Name</formula>
        <label>Assigned To Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ptt_Assigned_User_active__c</fullName>
        <formula>Owner:User.IsActive</formula>
        <label>Assigned User active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ptt_Close_Task__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Used in Task List views to fire a workflow and close all selested tasks.</inlineHelpText>
        <label>Close Task</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ptt_Confirmed_with_PO__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Confirmed with PO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ptt_Created_in_Year__c</fullName>
        <description>The Year in which the activity/task was created.</description>
        <formula>TEXT(YEAR(DATEVALUE( CreatedDate )))</formula>
        <label>Created in Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ptt_Last_Customer_URL__c</fullName>
        <label>Customer URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>ptt_LeadOrContact__c</fullName>
        <description>To differentiate if task is on Lead or Contact for email notification.</description>
        <formula>IF (BEGINS(WhoId,&quot;00Q&quot;),&quot;OnLead&quot;,&quot;OnContact&quot;)</formula>
        <label>LeadOrContact</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ptt_Owner_BU__c</fullName>
        <label>Owner BU</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ptt_Priority_for_Activity__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                    <color>#FF0000</color>
                    <label>High</label>
                </value>
                <value>
                    <fullName>Normal</fullName>
                    <color>#FFCC66</color>
                    <default>true</default>
                    <label>Normal</label>
                </value>
                <value>
                    <fullName>Low</fullName>
                    <color>#33FF33</color>
                    <label>Low</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ptt_Status_for_Activity__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                    <default>true</default>
                    <label>Not Started</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Waiting on someone else</fullName>
                </value>
                <value>
                    <fullName>Deferred</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sf42_de_Activity__c</fullName>
        <label>Activity</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>sf42_de_Field_Activity__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Airplane</fullName>
                </value>
                <value>
                    <fullName>Car</fullName>
                </value>
                <value>
                    <fullName>Commissioning</fullName>
                </value>
                <value>
                    <fullName>Conference Exhibitors</fullName>
                </value>
                <value>
                    <fullName>Conference Participant</fullName>
                </value>
                <value>
                    <fullName>Customer complain</fullName>
                </value>
                <value>
                    <fullName>Customer Relationship</fullName>
                </value>
                <value>
                    <fullName>Further Training</fullName>
                </value>
                <value>
                    <fullName>Product Presentation</fullName>
                </value>
                <value>
                    <fullName>Product Training</fullName>
                </value>
                <value>
                    <fullName>PT Seminar</fullName>
                </value>
                <value>
                    <fullName>Roadshow</fullName>
                </value>
                <value>
                    <fullName>Seminar</fullName>
                </value>
                <value>
                    <fullName>Service</fullName>
                </value>
                <value>
                    <fullName>Tech-Support</fullName>
                </value>
                <value>
                    <fullName>Trade Show</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sf42_de_Customer_Interest__c</fullName>
        <label>Customer Interest</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Neukauf</fullName>
                </value>
                <value>
                    <fullName>Aufrüstung</fullName>
                </value>
                <value>
                    <fullName>Upgrade (alt gegen Neu)</fullName>
                </value>
                <value>
                    <fullName>Service, Dienstleistung</fullName>
                </value>
                <value>
                    <fullName>Schulung Inhouseseminar</fullName>
                </value>
                <value>
                    <fullName>Technischer Support</fullName>
                </value>
                <value>
                    <fullName>Beschwerde</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sf42_de_Customer_Type__c</fullName>
        <label>Customer Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Strategischer und TOP- Kunde</fullName>
                </value>
                <value>
                    <fullName>Altkunde</fullName>
                </value>
                <value>
                    <fullName>Neukunde</fullName>
                </value>
                <value>
                    <fullName>Wiederverkäufer (OEM)</fullName>
                </value>
                <value>
                    <fullName>Zischenhändler</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sf42_de_Field_Activity__c</fullName>
        <label>Field Activity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Customer Visit</fullName>
                </value>
                <value>
                    <fullName>Event</fullName>
                </value>
                <value>
                    <fullName>Office</fullName>
                </value>
                <value>
                    <fullName>Travel</fullName>
                </value>
                <value>
                    <fullName>Paid Leave</fullName>
                </value>
                <value>
                    <fullName>Sick Leave</fullName>
                </value>
                <value>
                    <fullName>Public Holiday</fullName>
                </value>
                <value>
                    <fullName>Webmeeting</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sf42_de_Product_Interest__c</fullName>
        <label>Product Interest</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sf42_de_Visit__c</fullName>
        <label>Visit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>First visit</fullName>
                </value>
                <value>
                    <fullName>Another visit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sf42_de_was_visited__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Was visited</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sf42_gl_ALI__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ALI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sf42_gl_CM__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sf42_gl_NDT__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NDT</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>